--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="/bower/angular/angular.min.js"></script>
     <script src="/bower/angular-cookies/angular-cookies.min.js"></script>
     <script src="/bower/angular-sanitize/angular-sanitize.min.js"></script>
+    <script src="/bower/angular-local-storage/dist/angular-local-storage.min.js"></script>
     <script src="/dist/ng-conexo.js"></script>
     <script src="/demo/demo.js"></script>
 
